--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -5,27 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="20dp"
-    tools:context=".MainActivity"
+    tools:context=".ViewPagerActivity">
 
-    >
-
-
-    <Button
-        android:id="@+id/btnLoad"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Load Fragment"
-        android:background="@android:color/holo_orange_light"/>
-    
-    <RelativeLayout
-        android:id="@+id/fragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
         android:background="@android:color/darker_gray"
+        app:tabTextColor="#ffffff"
+        app:tabIndicatorColor="#ffffff"
+
         >
 
+    </android.support.design.widget.TabLayout>
 
-    </RelativeLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
